# market-data-handler

./: .gitignore  CMakeLists.txt  cmake_install.cmake  market_data_feed
include/: MessageParser.hpp  RawMessage.hpp  ThreadJoiner.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  Trade.hpp  TradeQueue.hpp  WebSocketClient.hpp
src/: MessageParser.cpp  TradeQueue.cpp  WebSocketClient.cpp  main.cpp
